--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,11 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --color-palette-dark-green: #061F20;
+  --color-palette-tan: #DDD8CA;
+  --color-palette-light-green: #DAF1DE;
+  --color-palette-medium-green: #8EB69B;
 }
 
 @media (prefers-color-scheme: dark) {
