--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 :root {
   --background: #ffffff;
@@ -10,6 +11,7 @@
   --color-palette-tan: #DDD8CA;
   --color-palette-light-green: #DAF1DE;
   --color-palette-medium-green: #8EB69B;
+  --color-palette-border-green: #36573F
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +24,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
 }
